# cpp-static-io

./: .gitignore  CMakeLists.txt  StaticIOPlugin.cpp  StaticWritePlugin.cpp  main.cpp
